<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Lock Pro®</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="socialmedia">App Lock Pro®</string>
    <string name="app_facebook">Facebook</string>
    <string name="app_twitter">Twitter</string>
    <string name="app_instagram">Instagram</string>
    <string name="app_youtube">YouTube</string>
    <string name="app_Linkedin">LinkedIn</string>
    <string name="app_pinterest">Pinterest</string>
    <string name="app_yahoo_answer">Yahoo answer</string>
    <string name="app_google_plus">Google+</string>
    <string name="app_reddit">Reddit</string>
    <string name="app_tumblr">Tumblr</string>
    <string name="app_Dropbox">Dropbox</string>
    <string name="app_skype">Skype</string>
    <string name="app_vimeo">Vimeo</string>
    <string name="app_sound_cloud">SoundCloud</string>
    <string name="app_deviantArt">DeviantArt</string>
    <string name="app_path">Path</string>
    <string name="app_meetup">Meetup</string>
    <string name="app_imdb">IMDB</string>
    <string name="app_digg">Digg</string>
    <string name="app_meet_me">MeetMe</string>
    <string name="app_dailymotion">Dailymotion</string>
    <string name="app_amazon">Amazon</string>
    <string name="app_ebay">ebay</string>
    <string name="app_blogger">Blogger</string>
    <string name="app_docin">docin</string>
    <string name="app_docstoc">docstoc</string>
    <string name="app_delicious">Delicious</string>
    <string name="app_instapaper">instapaper</string>
    <string name="app_plurk">plurk</string>
    <string name="app_scoop">scoop</string>
    <string name="app_squidoo">squidoo</string>
    <string name="app_storify">storify</string>
    <string name="app_stumbleupon">Stumbleupon</string>
    <string name="app_Technorati">Technorati</string>
    <string name="app_folkd">folkd</string>
    <string name="app_yelp">yelp</string>
    <string name="app_4shared">4shared</string>
    <string name="app_myspace">Myspace</string>
    <string name="app_vine">Vine</string>
    <string name="app_ask_fm">Ask.fm</string>
    <string name="app_issuu">issuu</string>
    <string name="app_flickr">Flickr</string>
    <string name="app_slideshare">slideshare</string>
    <string name="app_diigo">diigo</string>
    <string name="app_hi5">Hi5</string>
    <string name="app_tagged">Tagged</string>
    <string name="app_Livejournal">LiveJournal</string>
    <string name="app_foursquare">Foursquare</string>
    <string name="app_ezinearticles">Ezine Articles</string>
    <string name="url_vine">https://vine.co/</string>
    <string name="url_ask_fm">http://m.ask.fm/</string>
    <string name="url_facebook">http://facebook.com/</string>
    <string name="url_twitter">https://twitter.com/</string>
    <string name="url_instagram">https://instagram.com/</string>
    <string name="url_youtube">http://youtube.com/</string>
    <string name="url_Linkedin">http://linkedin.com</string>
    <string name="url_pinterest">https://www.pinterest.com/</string>
    <string name="url_yahoo_answer">https://answers.yahoo.com/</string>
    <string name="url_google_plus">https://plus.google.com/</string>
    <string name="url_reddit">https://m.reddit.com/</string>
    <string name="url_tumblr">http://tumblr.com</string>
    <string name="url_myspace">http://myspace.com/</string>
    <string name="url_skype">http://skype.com/</string>
    <string name="url_vimeo">http://vimeo.com/</string>
    <string name="url_sound_cloud">https://soundcloud.com</string>
    <string name="url_deviantart">http://www.deviantart.com/</string>
    <string name="url_meetup">http://www.meetup.com</string>
    <string name="url_digg">http://digg.com</string>
    <string name="url_baidu">www.baidu.com/ </string>
    <string name="url_path">http://www.path.com</string>
    <string name="url_meet_me">http://www.meetme.com</string>
    <string name="url_dailymotion">http://dailymotion.com/</string>
    <string name="url_amazon">http://amazon.com/</string>
    <string name="url_ebay">http://ebay.com/</string>
    <string name="url_blogger">http://blogger.com</string>
    <string name="url_docin">http://docin.com</string>
    <string name="url_docstoc">http://docstoc.com</string>
    <string name="url_delicious">http://delicious.com</string>
    <string name="url_instapaper">http://instapaper.com</string>
    <string name="url_plurk">http://plurk.com</string>
    <string name="url_scoop">http://scoop.it</string>
    <string name="url_squidoo">http://squidoo.com</string>
    <string name="url_storify">http://storify.com</string>
    <string name="url_stumbleupon">http://stumbleupon.com</string>
    <string name="url_Technorati">http://technorati.com</string>
    <string name="url_folkd">http://www.folkd.com</string>
    <string name="url_yelp">http://yelp.com</string>
    <string name="url_4shared">http://4shared.com/</string>
    <string name="url_Dropbox">http://dropbox.com</string>
    <string name="url_issuu">http://issuu.com</string>
    <string name="url_flickr">http://flickr.com/</string>
    <string name="url_slideshare">http://slideshare.com</string>
    <string name="url_diigo">http://diigo.com</string>
    <string name="url_hi5">http://www.hi5.com</string>
    <string name="url_tagged">http://www.tagged.com</string>
    <string name="url_Livejournal">http://Livejournal.com</string>
    <string name="url_foursquare">http://foursquare.com</string>
    <string name="url_ezine_articles">http://www.ezinearticles.com</string>
    <string name="url_Skyrock">http://www.skyrock.mobi/</string>
    <string name="url_Google">https://www.google.com/</string>
    <string name="url_Box">https://www.box.com/</string>
    <string name="url_DropBox">https://www.dropbox.com/</string>
    <string name="url_Travian">http://www.travian.com/</string>
    <string name="url_SinaWeibo">http://weibo.com/login</string>
    <string name="url_Odnoklassniki">http://m.ok.ru/</string>
    <string name="url_WeHeartIt">http://weheartit.com/</string>
    <string name="url_WAYN">http://www2.wayn.com/</string>
    <string name="url_mymfb">http://mymfb.com/mobile/</string>
    <string name="url_medium">https://medium.com/</string>
    <string name="url_yikyak">http://www.yikyak.com/home</string>
    <string name="url_periscope.tv">periscope.tv</string>
    <string name="url_slack">https://slack.com/</string>
    <string name="url_blab.im">https://blab.com/</string>
    <string name="url_Gmail">https://www.gmail.com/</string>
    <string name="url_yahoomail">https://mail.yahoo.com/</string>
    <string name="url_outlookmail">https://login.live.com/</string>
    <string name="url_aolmail">https://mail.aol.com</string>
    <string name="url_Qzone">http://www.qzone.qq.com/</string>
    <string name="url_MyLife">https://www.mylife.com/</string>
    <string name="url_Xanga">http://xanga.com/</string>
    <string name="url_CyWorld">http://m.cyworld.com/</string>
    <string name="url_Fotolog">http://www.fotolog.net/</string>
    <string name="url_GaiaOnline">https://www.gaiaonline.com/</string>
    <string name="url_Wikipedia">http://www.wikipedia.org</string>
    <string name="url_scribd">http://scribd.com</string>
    <string name="url_quora">http://quora.com</string>
    <string name="url_VKontakte">https://m.vk.com</string>
    <string name="url_9Gag">http://9gag.com/</string>
    <string name="url_Buzzfeed">http://www.buzzfeed.com/</string>
    <string name="url_Imgur">http://m.imgur.com/</string>
    <string name="url_LifeHacker">http://lifehacker.com/</string>
    <string name="url_netflix">https://www.netflix.com/</string>
    <string name="url_Classmates">http://www.classmates.com/</string>
    <string name="url_Badoo">https://m.badoo.com/</string>
    <string name="url_BlackPlanet">http://www.blackplanet.com/</string>
    <string name="url_Flixster">http://www.flixster.com/</string>
    <string name="url_imdb">https://www.imdb.com</string>
    <string name="url_Twoo">https://m.twoo.com/</string>
    <string name="url_Last.fm">http://www.last.fm/</string>
    <string name="app_wikipedia">Wikipedia</string>
    <string name="app_scribd">Scribd</string>
    <string name="app_VKontakte">VKontakte (VK)</string>
    <string name="app_9Gag">9Gag</string>
    <string name="app_Buzzfeed">Buzzfeed</string>
    <string name="app_Imgur">Imgur</string>
    <string name="app_LifeHacker">Life hacker</string>
    <string name="app_quora">Quora</string>
    <string name="app_netflix">netflix</string>
    <string name="app_Classmates">Classmates</string>
    <string name="app_Badoo">Badoo</string>
    <string name="app_BlackPlanet">BlackPlanet</string>
    <string name="app_Flixster">Flixster</string>
    <string name="app_Imdb">IMDB</string>
    <string name="app_Twoo">Twoo</string>
    <string name="app_Last.fm">Last.fm</string>
    <string name="app_Qzone">Qzone</string>
    <string name="app_MyLife">My Life</string>
    <string name="app_Xanga">Xanga</string>
    <string name="app_CyWorld">CyWorld</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">Enjoying this app? Then, express your satisfaction by rating this app, rating the app takes few seconds… but your opinion will be vastly appreciated!</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Remind later</string>
        <string name="app_name">App Lock Pro</string>
        <string name="version">Version 1.0.0 </string>
        <string name="lblLockNewApp">Lock the new app</string>
        <string name="lblLockNewAppDesc">After you installed the new app, you can one tap to lock the app.</string>
        <string name="lblDelayToLock">Delay to lock</string>
        <string name="lblDelayToLockDesc">Re-lock is not required when returning from a brief exit</string>
        <string name="lblDelaytimelimit">Delay time limit</string>
        <string name="lblUntilscreenislocked">Until screen is locked</string>
        <string name="lblLoginOptions">Login Options</string>
        <string name="lblLoginOptionsDesc">Setup a password, pin or pattern.</string>
        <string name="lblforgotpassword"><u>Forgot password?</u></string>
        <string name="lbl_Forgot_Pattern"><u>Forgot Pattern?</u></string>
        <string name="lbldecoypasswordhead">Decoy Mode</string>
        <string name="lblsetting_StorageOptions">Storage Options</string>
        <string name="lblsetting_StorageOptionsDesc">Lock your data in phone memory or SD card.</string>
        <string name="lblsetting_StealthMode">Stealth Mode (Hide Icon)</string>
        <string name="lbldecoypassworddesc">Fake login deters authorized users.</string>
        <string name="lblstealth_mode_main_des">Hides launch icon of Vault Encryptor.</string>
        <string name="lbl_data_recovery">Data Recovery</string>
        <string name="lbl_data_recovery_desc">Recover your previously lost data in Vault Encryptor.</string>
        <string name="lblclouddesc">Sync your locked data to your Cloud account.</string>
        <string name="lblpanic_switchdesc">Quickly switches to other apps, prevents snooping.</string>
        <string name="lbl_cloud_backup_title">Cloud Backup</string>
        <string name="lbl_folderlockpro_feature_PanicSwitch">Panic Switch</string>
        <string name="lblsetting_SecurityCredentials_Setpasword_Tryagain">Wrong password, try again</string>
        <string name="lblsetting_SecurityCredentials_Setpattern_Tryagain">Wrong pattern, try again</string>
        <string name="lblsetting_RecoveryofCredentials">Recovery of Security Locks</string>
        <string name="lblsetting_RecoveryofCredentialsDesc">Recover security locks in case you forget it.</string>
</resources>