<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@color/rate_dialog_back_color">
    
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colornotelbl"
        android:orientation="horizontal" >
         
        <!-- Title -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dip"
            android:layout_marginTop="4dip"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/rta_dialog_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/transparent_color"
            android:textStyle="normal" />
        
    </LinearLayout>
 	 
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
		android:gravity="center_horizontal"
		android:layout_weight="1"
        android:orientation="horizontal" >

       <TextView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dip"
        android:layout_marginTop="4dip"
        android:padding="8dp"
        android:textSize="20sp"
        android:text="@string/rta_dialog_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colornotelbl"
        android:textStyle="normal" />
       
        
        
    </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content" >
        
       <ImageView
           android:layout_width="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_height="wrap_content"
        android:src="@drawable/rate_reviw_icon" />  
        
       <ImageView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/rate_reviw_icon" /> 
        
       <ImageView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/rate_reviw_icon" /> 
        
       <ImageView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/rate_reviw_icon" /> 
        
       <ImageView
           android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:src="@drawable/rate_reviw_icon" /> 

        </LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"        
        android:orientation="horizontal">

        <Button 
        android:id="@+id/btnRateNow"    
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/btn_custom_rate_dialog"
        android:layout_weight="1" 
        android:textSize="16sp"
        android:textColor="@color/transparent_color"     
        android:text="@string/rta_dialog_ok"
            />
        
        <Button 
        android:id="@+id/btnRemindLater"    
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center"
         android:background="@drawable/btn_custom_rate_dialog"
        android:layout_weight="1"  
        android:textSize="16sp"
        android:textColor="@color/transparent_color"          
        android:text="@string/rta_dialog_cancel"
            />      
         

    </LinearLayout>

</LinearLayout>
