<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical" 
    android:id="@+id/ll_background"
	android:background="@color/colorPrimary"
	xmlns:tools="http://schemas.android.com/tools" tools:context=".LoginActivity">

	<LinearLayout
		android:id="@+id/ll_fingerprint"
		android:layout_width="@dimen/_40sdp"
		android:layout_height="@dimen/_40sdp"
		android:layout_gravity="end"
		android:layout_margin="10dp"
		android:gravity="center">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/fingerprint" />

	</LinearLayout>


	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_1sdp"
		android:layout_marginLeft="90dp"
        android:gravity="center"
        android:orientation="vertical" >
    
    <!--<ImageView-->
        	<!--android:id="@+id/iv_menu_feature_logo"-->
            <!--android:layout_width="280dp"-->
            <!--android:layout_height="280dp"-->
            <!--android:src="@drawable/login_key_icon" />-->
    
    
    </LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dip"
		android:gravity="center"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="horizontal" >

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical" >

				<TextView
					android:id="@+id/lbl_App_Name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/app_name"
					android:layout_marginLeft="5dip"
					android:textStyle="normal"
					android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
					android:textSize="25sp"
					android:textColor="@color/ColorWhite"

					/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:text="@string/version"
					android:layout_below="@+id/lbl_App_Name"
					android:layout_centerHorizontal="true"
					android:textAppearance="?android:attr/textAppearanceMedium"
					android:textColor="@color/ColorWhite"
					android:textSize="16sp" />


			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>
    
    <RelativeLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/txt_wrong_password_pin"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dp"
	            android:layout_marginStart="20dp"	           
	            android:text="@string/lblsetting_SecurityCredentials_Setpasword_Tryagain"
	            android:textAppearance="?android:attr/textAppearance"
	            android:textColor="@android:color/white"
	            android:layout_centerHorizontal="true"
	            android:layout_marginRight="10dip"
	            android:layout_marginEnd="10dip"
	            android:textSize="14sp"
	            android:textStyle="normal"
	            android:typeface="normal" />

	    </RelativeLayout>
    

    
	    <LinearLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:paddingTop ="12dip"
	         android:gravity="center_vertical"
	         android:paddingBottom ="5dip"
	         android:paddingLeft ="25dip"
         	 android:paddingRight ="25dip"        	 
	         android:orientation ="horizontal" >

			<EditText
				android:id="@+id/txtPassword"
				android:layout_width="@dimen/_250sdp"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:inputType="textPassword"
				android:textColor="@color/ColorWhite"
				android:focusable="true"
				android:gravity="center"
				android:textCursorDrawable="@drawable/mycursorshape"
				android:maxLength="17"
				android:background="@drawable/underline_edittext"
				android:textSize="17sp" >
				<requestFocus />
			</EditText>
	
		</LinearLayout>
		

		

    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dip"
         android:gravity="center"
         android:orientation="horizontal" >
	    
         <TextView
              android:id="@+id/txtforgotpassword"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:text="@string/lblforgotpassword"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:layout_marginBottom="2dip"
              android:textColor="@color/ColorWhite"
              android:textSize="17sp" />
	    
    </LinearLayout>
    
    <TextView
	            android:id="@+id/tv_forgot"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="5dp"
	            android:layout_marginLeft="5dp"
	            android:layout_marginStart="5dp"
	            android:layout_gravity="center_horizontal"
	            android:text="@string/lblsetting_SecurityCredentials_Setpasword_Tryagain"
	            android:textAppearance="?android:attr/textAppearance"
	            android:textColor="@android:color/white"
	            android:layout_marginRight="10dip"
	            android:layout_marginEnd="10dip"
	            android:textSize="14sp"
	            android:textStyle="normal"
	            android:typeface="normal"/>
    
    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="1px"
        android:layout_height="1px"
        android:layout_weight="1" />
	<LinearLayout
		android:id="@+id/banner_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_alignParentBottom="true"
		/>
</LinearLayout>
